as-alb-docker/mastodon-infra.template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: CloudFormation template file for Mastodon (Infrastructure layer).
Parameters:
  Tag1Key:
    Description: Tag key
    Type: String
  Tag1Value:
    Description: Tag value
    Type: String
  Tag2Key:
    Description: Tag key
    Type: String
  Tag2Value:
    Description: Tag value
    Type: String
  MastodonFQDN:
    Description: FQDN of Mastodon instance
    Type: String
  MastodonVersion:
    Description: Release tag name of Mastodon
    Type: String
  SecretKeyBase:
    Description: SECRET_KEY_BASE value.
    Type: String
  OtpSecret:
    Description: OTP_SECRET value.
    Type: String
  SubnetAvailabilityZone:
    Description: Availability Zones of Subnet
    Type: 'List<AWS::EC2::AvailabilityZone::Name>'
  DBInstanceClass:
    Description: RDS instance type
    Type: String
    Default: db.t2.micro
    AllowedValues:
      - db.m4.large
      - db.m4.xlarge
      - db.m4.2xlarge
      - db.m4.4xlarge
      - db.m4.10xlarge
      - db.m3.medium
      - db.m3.large
      - db.m3.xlarge
      - db.m3.2xlarge
      - db.r3.large
      - db.r3.xlarge
      - db.r3.2xlarge
      - db.r3.4xlarge
      - db.r3.8xlarge
      - db.t2.micro
      - db.t2.small
      - db.t2.medium
      - db.t2.large
    ConstraintDescription: must be a valid RDS instance type.
  DBName:
    Description: Database schema name
    Type: String
  DBEngineVersion:
    Description: RDS (Postgresql) engine version
    Type: String
    AllowedValues:
      - 11.2
      - 11.1
      - 10.7
      - 10.6
      - 10.5
      - 10.4
      - 10.3
      - 10.1
      - 9.6.12
      - 9.6.11
      - 9.6.10
      - 9.6.9
      - 9.6.8
      - 9.6.6
      - 9.6.5
      - 9.6.3
      - 9.6.2
      - 9.6.1
    ConstraintDescription: must be a valid RDS engine version.
  DBLicenseModel:
    Description: RDS (Postgresql) engine license model
    Type: String
    Default: postgresql-license
    AllowedValues:
      - postgresql-license
    ConstraintDescription: must be a valid RDS license model.
  DBMasterUsername:
    Description: Database master user name
    Type: String
  DBMasterUserPassword:
    Description: Database master user password
    Type: String
  DBStorageType:
    Description: RDS (Postgresql) storage type
    Type: String
    Default: standard
    AllowedValues:
      - standard
      - gp2
      - io1
    ConstraintDescription: must be a valid RDS storage type.
  DBSnapshotIdentifier:
    Description: RDS Snapshot ID
    Type: String
    ConstraintDescription: must be a valid RDS storage type.
  ElastiCacheNodeType:
    Description: ElastiCache node type
    Type: String
    Default: cache.t2.micro
    AllowedValues:
      - cache.t2.micro
      - cache.t2.small
      - cache.t2.medium
      - cache.m3.medium
      - cache.m3.large
      - cache.m3.xlarge
      - cache.m3.2xlarge
      - cache.m4.large
      - cache.m4.xlarge
      - cache.m4.2xlarge
      - cache.m4.4xlarge
      - cache.m4.10xlarge
      - cache.r3.large
      - cache.r3.xlarge
      - cache.r3.2xlarge
      - cache.r3.4xlarge
      - cache.r3.8xlarge
  ElastiCacheVersion:
    Description: ElastiCache (Redis) engine version
    Type: String
    AllowedValues:
      - 5.0.3
      - 5.0.0
      - 4.0.10
      - 3.2.10
      - 3.2.6
      - 3.2.4
      - 2.8.24
      - 2.8.23
      - 2.8.22
      - 2.8.21
      - 2.8.19
      - 2.8.6
      - 2.6.13
    ConstraintDescription: must be a valid Elasticache engine version.
  BastionInstanceType:
    Description: EC2 instance type of bastion server
    Type: String
    Default: t2.micro
    AllowedValues:
      - t1.micro
      - t2.nano
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
      - m1.small
      - m1.medium
      - m1.large
      - m1.xlarge
      - m2.xlarge
      - m2.2xlarge
      - m2.4xlarge
      - m3.medium
      - m3.large
      - m3.xlarge
      - m3.2xlarge
      - m4.large
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
      - m4.10xlarge
      - c1.medium
      - c1.xlarge
      - c3.large
      - c3.xlarge
      - c3.2xlarge
      - c3.4xlarge
      - c3.8xlarge
      - c4.large
      - c4.xlarge
      - c4.2xlarge
      - c4.4xlarge
      - c4.8xlarge
      - g2.2xlarge
      - g2.8xlarge
      - r3.large
      - r3.xlarge
      - r3.2xlarge
      - r3.4xlarge
      - r3.8xlarge
      - i2.xlarge
      - i2.2xlarge
      - i2.4xlarge
      - i2.8xlarge
      - d2.xlarge
      - d2.2xlarge
      - d2.4xlarge
      - d2.8xlarge
      - hi1.4xlarge
      - hs1.8xlarge
      - cr1.8xlarge
      - cc2.8xlarge
      - cg1.4xlarge
    ConstraintDescription: must be a valid EC2 instance type.
  BastionInstanceAMI:
    Description: EC2 instance AMI ID of bastion server.
    Type: 'AWS::EC2::Image::Id'
    ConstraintDescription: must be a valid EC2 AMI ID.
  EC2KeyPair:
    Description: EC2 Key Pair Name
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be a valid EC2 Key Pair Name.
  NATInstanceType:
    Description: EC2 instance type of NAT instance.
    Type: String
    Default: t2.micro
    AllowedValues:
      - t1.micro
      - t2.nano
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
      - m1.small
      - m1.medium
      - m1.large
      - m1.xlarge
      - m2.xlarge
      - m2.2xlarge
      - m2.4xlarge
      - m3.medium
      - m3.large
      - m3.xlarge
      - m3.2xlarge
      - m4.large
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
      - m4.10xlarge
      - c1.medium
      - c1.xlarge
      - c3.large
      - c3.xlarge
      - c3.2xlarge
      - c3.4xlarge
      - c3.8xlarge
      - c4.large
      - c4.xlarge
      - c4.2xlarge
      - c4.4xlarge
      - c4.8xlarge
      - g2.2xlarge
      - g2.8xlarge
      - r3.large
      - r3.xlarge
      - r3.2xlarge
      - r3.4xlarge
      - r3.8xlarge
      - i2.xlarge
      - i2.2xlarge
      - i2.4xlarge
      - i2.8xlarge
      - d2.xlarge
      - d2.2xlarge
      - d2.4xlarge
      - d2.8xlarge
      - hi1.4xlarge
      - hs1.8xlarge
      - cr1.8xlarge
      - cc2.8xlarge
      - cg1.4xlarge
    ConstraintDescription: must be a valid EC2 instance type.
  PackageS3Bucket:
    Description: S3 bucket name for Mastodon pre-build package.
    Type: String
    ConstraintDescription: must be a valid S3 bucket name.
  PackageS3Prefix:
    Description: S3 folder name for Mastodon pre-build package.
    Type: String
    ConstraintDescription: must be a valid S3 key name.
  PackageName:
    Description: File name for Mastodon pre-build package.
    Type: String
    ConstraintDescription: must be a valid file name.
  ContentsS3Bucket:
    Description: S3 bucket name of content cache.
    Type: String
    ConstraintDescription: must be a valid S3 bucket name.
  ContentsAWSAccessKey:
    Description: AWSAccessKey for S3 access.
    Type: String
  ContentsAWSAccessSecret:
    Description: AWSAccessSecret for S3 access.
    Type: String
  LBAccessLogS3Bucket:
    Description: S3 bucket name of access log of load balancer.
    Type: String
    ConstraintDescription: must be a valid S3 bucket name.
  LBAccessLogPrefix:
    Description: Prefix of access log of load balancer.
    Type: String
  SMTPHostName:
    Description: SMTP host name.
    Type: String
  SMTPHostPort:
    Description: SMTP host port number.
    Default: '587'
    Type: Number
  SMTPUserName:
    Description: SMTP user name.
    Type: String
  SMTPPassword:
    Description: SMTP user password.
    Type: String
  SMTPSenderAddress:
    Description: E-mail address of mail sender.
    Type: String
    ConstraintDescription: must be a valid e-mail address.
Mappings:
  CIDR:
    VPC:
      IP: 10.0.0.0/16
    PrivateSubnet1:
      IP: 10.0.10.0/24
    PrivateSubnet2:
      IP: 10.0.11.0/24
    PublicSubnet1:
      IP: 10.0.20.0/24
    PublicSubnet2:
      IP: 10.0.21.0/24
    All:
      IP: 0.0.0.0/0
  RDSConfig:
    Port:
      Value: '5432'
    Storage:
      ValueByGb: '20'
    BackupRetentionPeriod:
      Value: '3'
  ElastiCacheConfig:
    Port:
      Value: '6379'
    SnapshotRetentionLimit:
      Value: '3'
    SnapshotWindow:
      Value: '05:00-09:00'
  InstanceConfig:
    Storage:
      ValueByGb: '20'
  RegionConfig:
    us-east-1:
      Principal: '127311923021'
      NATAMI: ami-0422d936d535c63b1
    us-east-2:
      Principal: 033677994240
      NATAMI: ami-0f9c61b5a562a16af
    us-west-1:
      Principal: 027434742980
      NATAMI: ami-0d4027d2cdbca669d
    us-west-2:
      Principal: '797873946194'
      NATAMI: ami-40d1f038
    ca-central-1:
      Principal: '985666609251'
      NATAMI: ami-b61b96d2
    eu-west-1:
      Principal: '156460612806'
      NATAMI: ami-0ea87e2bfa81ca08a
    eu-west-2:
      Principal: '652711504416'
      NATAMI: ami-e6768381
    eu-west-3:
      Principal: '009996457667'
      NATAMI: ami-0050bb60cea70c5b3
    eu-central-1:
      Principal: 054676820928
      NATAMI: ami-06465d49ba60cf770
    ap-northeast-1:
      Principal: '582318560864'
      NATAMI: ami-0cf78ae724f63bac0
    ap-northeast-2:
      Principal: '600734575887'
      NATAMI: ami-00c1445796bc0a29f
    ap-southeast-1:
      Principal: '114774131450'
      NATAMI: ami-0cf24653bcf894797
    ap-southeast-2:
      Principal: '783225319266'
      NATAMI: ami-08cfa02141f9e9bee
    ap-south-1:
      Principal: '718504428378'
      NATAMI: ami-0aba92643213491b9
    sa-east-1:
      Principal: '507241528517'
      NATAMI: ami-09c013530239687aa
    us-gov-west-1:
      Principal: 048591011584
      NATAMI: ami-c177eba0
    cn-north-1:
      Principal: '638102146993'
      NATAMI: ami-04cd0cf505fd3295e
Conditions:
  IsVirginia: !Equals 
    - !Ref 'AWS::Region'
    - us-east-1
  IsMaster: !Equals 
    - !Ref MastodonVersion
    - ''
  HasSecretKeyBase: !Not 
    - !Equals 
      - !Ref SecretKeyBase
      - ''
  HasOtpSecret: !Not 
    - !Equals 
      - !Ref OtpSecret
      - ''
  HasDBSnapshotIdentifier: !Not 
    - !Equals 
      - !Ref DBSnapshotIdentifier
      - ''
Resources:
  LbAccessLogBucketPolicy:
    Type: 'AWS::S3::BucketPolicy'
    Properties:
      Bucket: !Ref LBAccessLogS3Bucket
      PolicyDocument:
        Id: Policy1493789607994
        Version: 2012-10-17
        Statement:
          - Sid: Stmt1493789603166
            Action: 's3:PutObject'
            Effect: Allow
            Resource: !Sub >-
              arn:aws:s3:::${LBAccessLogS3Bucket}/${LBAccessLogPrefix}/AWSLogs/${AWS::AccountId}/*
            Principal:
              AWS:
                - !FindInMap [ RegionConfig, !Ref 'AWS::Region', Principal ]
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !FindInMap [ CIDR, VPC, IP ]
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-VPC'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  InternetGW:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-INetGW'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  VPCGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref InternetGW
      VpcId: !Ref VPC
  VPCRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-VPCRouteTable'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  VPCRouteTableRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: VPCGatewayAttachment
    Properties:
      DestinationCidrBlock: !FindInMap [ CIDR, All, IP ]
      GatewayId: !Ref InternetGW
      RouteTableId: !Ref VPCRouteTable
  PrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: !FindInMap [ CIDR, PrivateSubnet1, IP ]
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select 
        - '0'
        - !Ref SubnetAvailabilityZone
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PrivateSubnet1'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  PrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: !FindInMap [ CIDR, PrivateSubnet2, IP ]
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Select 
        - '1'
        - !Ref SubnetAvailabilityZone
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PrivateSubnet2'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  PublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: !FindInMap [ CIDR, PublicSubnet1, IP ]
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select 
        - '0'
        - !Ref SubnetAvailabilityZone
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PublicSubnet1'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  PublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: !FindInMap [ CIDR, PublicSubnet2, IP ]
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Select 
        - '1'
        - !Ref SubnetAvailabilityZone
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PublicSubnet2'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  PublicSubnetNetworkAcl:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PublicSubnetNetworkAcl'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  PublicSubnetNetworkAclEntryIngressHttp:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, All, IP ]
      Egress: false
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      PortRange:
        From: 80
        To: 80
      Protocol: 6
      RuleAction: allow
      RuleNumber: 110
  PublicSubnetNetworkAclEntryIngressHttps:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, All, IP ]
      Egress: false
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      PortRange:
        From: 443
        To: 443
      Protocol: 6
      RuleAction: allow
      RuleNumber: 120
  PublicSubnetNetworkAclEntryIngressSSH:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, All, IP ]
      Egress: false
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      PortRange:
        From: 22
        To: 22
      Protocol: 6
      RuleAction: allow
      RuleNumber: 130
  PublicSubnetNetworkAclEntryIngressConnectBack:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, All, IP ]
      Egress: false
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      PortRange:
        From: 1024
        To: 65535
      Protocol: 6
      RuleAction: allow
      RuleNumber: 190
  PublicSubnetNetworkAclEntryIngressICMP:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, All, IP ]
      Egress: false
      Icmp:
        Code: -1
        Type: -1
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      Protocol: 1
      RuleAction: allow
      RuleNumber: 200
  PublicSubnetNetworkAclEntryIngressPrivateSubnet1:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, PrivateSubnet1, IP ]
      Egress: false
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      Protocol: -1
      RuleAction: allow
      RuleNumber: 300
  PublicSubnetNetworkAclEntryIngressPrivateSubnet2:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, PrivateSubnet2, IP ]
      Egress: false
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      Protocol: -1
      RuleAction: allow
      RuleNumber: 310
  PublicSubnetNetworkAclEntryEgress:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, All, IP ]
      Egress: true
      NetworkAclId: !Ref PublicSubnetNetworkAcl
      Protocol: -1
      RuleAction: allow
      RuleNumber: 100
  PublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref VPCRouteTable
      SubnetId: !Ref PublicSubnet1
  PublicSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref VPCRouteTable
      SubnetId: !Ref PublicSubnet2
  PrivateSubnetNetworkAcl:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-PrivateSubnetNetworkAcl'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  PrivateSubnet1NetworkAclEntryIngress:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, PublicSubnet1, IP ]
      Egress: false
      NetworkAclId: !Ref PrivateSubnetNetworkAcl
      Protocol: -1
      RuleAction: allow
      RuleNumber: 100
  PrivateSubnet2NetworkAclEntryIngress:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, PublicSubnet2, IP ]
      Egress: false
      NetworkAclId: !Ref PrivateSubnetNetworkAcl
      Protocol: -1
      RuleAction: allow
      RuleNumber: 110
  PrivateSubnetNetworkAclEntryIngressConnectBack:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, All, IP ]
      Egress: false
      NetworkAclId: !Ref PrivateSubnetNetworkAcl
      PortRange:
        From: 1024
        To: 65535
      Protocol: 6
      RuleAction: allow
      RuleNumber: 190
  PrivateSubnetNetworkAclEntryEgress:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: !FindInMap [ CIDR, All, IP ]
      Egress: true
      NetworkAclId: !Ref PrivateSubnetNetworkAcl
      Protocol: -1
      RuleAction: allow
      RuleNumber: 100
  PrivateSubnet1ToNetworkACL:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet1
      NetworkAclId: !Ref PrivateSubnetNetworkAcl
  PrivateSubnet2ToNetworkACL:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet2
      NetworkAclId: !Ref PrivateSubnetNetworkAcl
  PublicSubnet1ToNetworkACL:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1
      NetworkAclId: !Ref PublicSubnetNetworkAcl
  PublicSubnet2ToNetworkACL:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2
      NetworkAclId: !Ref PublicSubnetNetworkAcl
  SecurityGroupBastionInstance:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security Group for bastion Instance Host
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-SecurityGroupBastion'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  SecurityGroupBastionInstanceIngressSSH:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      FromPort: 22
      ToPort: 22
      GroupId: !Ref SecurityGroupBastionInstance
      IpProtocol: tcp
  SecurityGroupBastionInstanceEgress:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      GroupId: !Ref SecurityGroupBastionInstance
      IpProtocol: '-1'
  SecurityGroupNATInstance:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security Group for NAT instance.
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-SecurityGroupNAT'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  SecurityGroupNATInstanceIngressPrivateSubnet1Http:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet1, IP ]
      FromPort: 80
      ToPort: 80
      GroupId: !Ref SecurityGroupNATInstance
      IpProtocol: tcp
  SecurityGroupNATInstanceIngressPrivateSubnet2Http:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet2, IP ]
      FromPort: 80
      ToPort: 80
      GroupId: !Ref SecurityGroupNATInstance
      IpProtocol: tcp
  SecurityGroupNATInstanceIngressPrivateSubnet1Https:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet1, IP ]
      FromPort: 443
      ToPort: 443
      GroupId: !Ref SecurityGroupNATInstance
      IpProtocol: tcp
  SecurityGroupNATInstanceIngressPrivateSubnet2Https:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet2, IP ]
      FromPort: 443
      ToPort: 443
      GroupId: !Ref SecurityGroupNATInstance
      IpProtocol: tcp
  SecurityGroupNATInstanceIngressPrivateSubnet1Smtp:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet1, IP ]
      FromPort: !Ref SMTPHostPort
      ToPort: !Ref SMTPHostPort
      GroupId: !Ref SecurityGroupNATInstance
      IpProtocol: tcp
  SecurityGroupNATInstanceIngressPrivateSubnet2Smtp:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet2, IP ]
      FromPort: !Ref SMTPHostPort
      ToPort: !Ref SMTPHostPort
      GroupId: !Ref SecurityGroupNATInstance
      IpProtocol: tcp
  # SecurityGroupNATInstanceIngressSSH:
  #   Type: 'AWS::EC2::SecurityGroupIngress'
  #   Properties:
  #     CidrIp: !FindInMap [ CIDR, All, IP ]
  #     FromPort: 22
  #     ToPort: 22
  #     GroupId: !Ref SecurityGroupNATInstance
  #     IpProtocol: tcp
  SecurityGroupNATInstanceEgress:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      GroupId: !Ref SecurityGroupNATInstance
      IpProtocol: '-1'
  SecurityGroupMastodonInstance:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security Group for Mastodon Instance Host
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-SecurityGroupMastodon'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  SecurityGroupMastodonInstanceIngressHttp:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      FromPort: 80
      ToPort: 80
      GroupId: !Ref SecurityGroupMastodonInstance
      IpProtocol: tcp
  SecurityGroupMastodonInstanceIngressHttps:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      FromPort: 443
      ToPort: 443
      GroupId: !Ref SecurityGroupMastodonInstance
      IpProtocol: tcp
  SecurityGroupMastodonInstanceIngressSSH:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      FromPort: 22
      ToPort: 22
      GroupId: !Ref SecurityGroupMastodonInstance
      IpProtocol: tcp
  SecurityGroupMastodonInstanceEgress:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      GroupId: !Ref SecurityGroupMastodonInstance
      IpProtocol: '-1'
  NATInstanceNetworkIF:
    Type: 'AWS::EC2::NetworkInterface'
    Properties:
      Description: NAT Instance Network Interface.
      GroupSet:
        - !Ref SecurityGroupNATInstance
      SourceDestCheck: false
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-NATNetworkIF'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  NATInstance:
    Type: 'AWS::EC2::Instance'
    DependsOn: VPCGatewayAttachment
    Properties:
      DisableApiTermination: false
      ImageId: !FindInMap [ RegionConfig, !Ref 'AWS::Region', NATAMI ]
      InstanceInitiatedShutdownBehavior: stop
      InstanceType: !Ref NATInstanceType
      KeyName: !Ref EC2KeyPair
      Monitoring: false
      NetworkInterfaces:
        - DeviceIndex: '0'
          NetworkInterfaceId: !Ref NATInstanceNetworkIF
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-NAT'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  NATRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-NATRouteTable'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  NATRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref NATRouteTable
      DestinationCidrBlock: !FindInMap [ CIDR, All, IP ]
      InstanceId: !Ref NATInstance
  PrivateSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref NATRouteTable
      SubnetId: !Ref PrivateSubnet1
  PrivateSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref NATRouteTable
      SubnetId: !Ref PrivateSubnet2
  VPCEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - 's3:*'
            Resource:
              - 'arn:aws:s3:::*'
      RouteTableIds:
        - !Ref VPCRouteTable
        - !Ref NATRouteTable
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      VpcId: !Ref VPC
  BastionInstanceIAMRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: root
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: 's3:*'
                Resource: !Join 
                  - ''
                  - - 'arn:aws:s3:::'
                    - !Ref ContentsS3Bucket
              - Effect: Allow
                Action: 's3:*'
                Resource: !Join 
                  - ''
                  - - 'arn:aws:s3:::'
                    - !Ref ContentsS3Bucket
                    - /*
              - Effect: Allow
                Action: 's3:*'
                Resource: !Join 
                  - ''
                  - - 'arn:aws:s3:::'
                    - !Ref PackageS3Bucket
              - Effect: Allow
                Action: 's3:*'
                Resource: !Join 
                  - ''
                  - - 'arn:aws:s3:::'
                    - !Ref PackageS3Bucket
                    - /*
  BastionInstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      Roles:
        - !Ref BastionInstanceIAMRole
  BastionInstanceNetworkIF:
    Type: 'AWS::EC2::NetworkInterface'
    Properties:
      Description: Bastion instance network interface.
      GroupSet:
        - !Ref SecurityGroupBastionInstance
      SourceDestCheck: true
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-BastionNetworkIF'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  BastionInstance:
    Type: 'AWS::EC2::Instance'
    DependsOn: VPCGatewayAttachment
    Properties:
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            DeleteOnTermination: true
            VolumeSize: !FindInMap [ InstanceConfig, Storage, ValueByGb ]
      DisableApiTermination: false
      IamInstanceProfile: !Ref BastionInstanceProfile
      ImageId: !Ref BastionInstanceAMI
      InstanceInitiatedShutdownBehavior: stop
      InstanceType: !Ref BastionInstanceType
      KeyName: !Ref EC2KeyPair
      Monitoring: true
      NetworkInterfaces:
        - Description: Mastodon Network Interface.
          DeviceIndex: '0'
          NetworkInterfaceId: !Ref BastionInstanceNetworkIF
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-Bastion'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      UserData: 
        Fn::Base64:
          Fn::Join:
            - ''
            - - |
                #!/bin/bash -xe
              - |
                # ********** Install packages for cloud formation **********
              - |
                export HOME=/root 
              - |
                apt-get update 
              - |
                apt-get -y install python-pip python-setuptools 
              - |
                pip install --upgrade pip awscli 
              - |
                cd /root 
              - |
                mkdir aws-cfn-bootstrap-latest
              - |
                curl https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz | tar xz -C aws-cfn-bootstrap-latest --strip-components 1 
              - |
                python /usr/lib/python2.7/dist-packages/easy_install.py aws-cfn-bootstrap-latest
              - |
                ln -s /root/aws-cfn-bootstrap-latest/init/ubuntu/cfn-hup /etc/init.d/cfn-hup 

              - |
                # ********** Install required packages **********
              - |
                apt-get update
              - '/usr/local/bin/cfn-init -v '
              - ' --stack '
              - !Ref 'AWS::StackName'
              - ' --resource BastionInstance '
              - ' --configsets installPackages '
              - ' --region '
              - !Ref 'AWS::Region'
              - |+

              - |
                curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
              - |
                apt-key fingerprint 0EBFCD88
              - |
                add-apt-repository \
                  "deb [arch=amd64] https://download.docker.com/linux/ubuntu \
                    $(lsb_release -cs) \
                    stable"
              - |
                apt-get update
              - |
                apt-get -y install docker-ce docker-ce-cli containerd.io
              - |
                curl -L "https://github.com/docker/compose/releases/download/1.24.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
              - |
                chmod +x /usr/local/bin/docker-compose
              - |
                # ********** Add mastodon user **********
              - |
                useradd -d /home/mastodon --create-home --user-group mastodon

              - |
                # ********** Build Mastodon **********
              - |
                cd /home/mastodon 
              - 'git clone https://github.com/tootsuite/mastodon.git '
              - !Ref MastodonFQDN
              - |+
                
              - 'cd '
              - !Ref MastodonFQDN
              - |+
                
              - !If 
                - IsMaster
                - ''
                - !Sub |
                  git checkout ${MastodonVersion} 
              - |
                # ********** docker-compose config **********
              - '/usr/local/bin/cfn-init -v '
              - ' --stack '
              - !Ref 'AWS::StackName'
              - ' --resource BastionInstance '
              - ' --configsets createDockerComposeConfig '
              - ' --region '
              - !Ref 'AWS::Region'
              - |+

              - |
                # ********** docker-compose build **********
              - |
                docker-compose build
              - |
                # ********** Setup Mastodon **********
              - '/usr/local/bin/cfn-init -v '
              - ' --stack '
              - !Ref 'AWS::StackName'
              - ' --resource BastionInstance '
              - ' --configsets createMastodonConfig '
              - ' --region '
              - !Ref 'AWS::Region'
              - |+

              - |
                export RAILS_ENV=production
              - !If 
                - HasSecretKeyBase
                - !Sub |
                  echo "SECRET_KEY_BASE=${SecretKeyBase}" >> .env.production
                - >
                  echo "SECRET_KEY_BASE=`docker-compose run --rm web rake secret`" >>
                  .env.production

              - !If 
                - HasOtpSecret
                - !Sub |
                  echo "OTP_SECRET=${OtpSecret}" >> .env.production
                - >
                  echo "OTP_SECRET=`docker-compose run --rm web rake secret`" >>
                  .env.production

              - |
                bundle exec rake mastodon:webpush:generate_vapid_key >> .env.production
              - !If 
                - HasDBSnapshotIdentifier
                - ''
                - |
                  docker-compose run --rm web rails db:setup 

              - |
                docker-compose run --rm web rails assets:precompile
              - |
                cd ..
              - 'tar cfz '
              - !Ref PackageName
              - ' '
              - !Ref MastodonFQDN
              - |+

              - !Sub >
                aws s3 cp ${PackageName}
                s3://${PackageS3Bucket}/${PackageS3Prefix}/${PackageName} 

              - |
                # ********** Notify **********
              - '/usr/local/bin/cfn-signal '
              - ' -e 0'
              - ' --stack '
              - !Ref 'AWS::StackName'
              - ' --resource BastionInstance'
              - ' --region '
              - !Ref 'AWS::Region'
              - |+

              - |
                # ********** The End **********
    CreationPolicy:
      ResourceSignal:
        Timeout: PT30M
    Metadata:
      'AWS::CloudFormation::Init':
        configSets:
          installPackages:
            - aptPackages
          createDockerComposeConfig:
            - createDockerComposeConfig
            - moveDockerComposeConfig
          createMastodonConfig:
            - createMastodonConfig
            - moveMastodonConfig
        aptPackages:
          packages:
            apt:
              apt-transport-https: []
              ca-certificates: []
              curl: []
              gnupg-agent: []
              software-properties-common: []
              certbot : []
        createDockerComposeConfig:
          files:
            /home/mastodon/docker-compose.yml:
              content: !Sub |
                "version: '3'"
                "services:"
                "  web:"
                "    build: ."
                "    image: tootsuite/mastodon"
                "    restart: always"
                "    env_file: .env.production"
                "    command: bash -c \"rm -f /mastodon/tmp/pids/server.pid; bundle exec rails s -p 3000 -b '0.0.0.0'\""
                "    networks:"
                "      - external_network"
                "      - internal_network"
                "    healthcheck:"
                "      test: [\"CMD-SHELL\", \"wget -q --spider --header 'x-forwarded-proto: https' --proxy=off localhost:3000/api/v1/instance || exit 1\"]"
                "    ports:"
                "      - \"127.0.0.1:3000:3000\""
                "    volumes:
                "      - ./public/system:/mastodon/public/system
                ""
                "  streaming:"
                "    build: ."
                "    image: tootsuite/mastodon"
                "    restart: always"
                "    env_file: .env.production"
                "    command: yarn start"
                "    networks:"
                "      - external_network"
                "      - internal_network"
                "    healthcheck:"
                "      test: [\"CMD-SHELL\", \"wget -q --spider --header 'x-forwarded-proto: https' --proxy=off localhost:4000/api/v1/streaming/health || exit 1\"]"
                "    ports:"
                "      - \"127.0.0.1:4000:4000\""
                "  sidekiq:"
                "    build: ."
                "    image: tootsuite/mastodon"
                "    restart: always"
                "    env_file: .env.production"
                "    command: bundle exec sidekiq"
                "    networks:"
                "      - external_network"
                "      - internal_network"
                "    volumes:"
                "      - ./public/system:/mastodon/public/system"
                "networks:"
                "  external_network:"
                "  internal_network:"
                "    internal: true"

        moveDockerComposeConfig:
          commands:
            001_moveFile:
              command: !Sub 'mv docker-compose.yml ${MastodonFQDN}/docker-compose.yml'
              cwd: /home/mastodon

        createMastodonConfig:
          files:
            /home/mastodon/.env.production:
              content: !Join 
                - ''
                - - |
                    # GENERATED BY CLOUD FORMATION TEMPLATE
                  - |
                    # Redis
                  - |
                    # You may set REDIS_URL instead for more advanced options
                  - REDIS_HOST=
                  - !GetAtt ElastiCacheCluster.RedisEndpoint.Address 
                  - |+

                  - REDIS_PORT=
                  - !GetAtt ElastiCacheCluster.RedisEndpoint.Port
                  - |+

                  - |
                    # You may set DATABASE_URL instead for more advanced options
                  - |
                    # Database
                  - DB_HOST=
                  - !GetAtt RDSInstance.Endpoint.Address
                  - |+

                  - DB_NAME=
                  - !Ref DBName
                  - |+

                  - DB_USER=
                  - !Ref DBMasterUsername
                  - |+

                  - DB_PASS=
                  - !Ref DBMasterUserPassword
                  - |+

                  - DB_PORT=
                  - !GetAtt RDSInstance.Endpoint.Port
                  - |+

                  - |
                    # Domain
                  - LOCAL_DOMAIN=
                  - !Ref MastodonFQDN
                  - |+

                  - |
                    # Mail
                  - SMTP_SERVER=
                  - !Ref SMTPHostName
                  - |+

                  - SMTP_PORT=
                  - !Ref SMTPHostPort
                  - |+

                  - SMTP_LOGIN=
                  - !Ref SMTPUserName
                  - |+

                  - SMTP_PASSWORD=
                  - !Ref SMTPPassword
                  - |+

                  - SMTP_FROM_ADDRESS=
                  - !Ref SMTPSenderAddress
                  - |+

                  - |
                    # Aws
                  - |
                    S3_ENABLED=true
                  - S3_BUCKET=
                  - !Ref ContentsS3Bucket
                  - |+

                  - AWS_ACCESS_KEY_ID=
                  - !Ref ContentsAWSAccessKey
                  - |+

                  - AWS_SECRET_ACCESS_KEY=
                  - !Ref ContentsAWSAccessSecret
                  - |+

                  - S3_REGION=
                  - !Ref 'AWS::Region'
                  - |+

                  - |
                    S3_PROTOCOL=https
                  - S3_HOSTNAME=
                  - !If 
                    - IsVirginia
                    - s3.amazonaws.com
                    - !Join 
                      - ''
                      - - s3-
                        - !Ref 'AWS::Region'
                        - .amazonaws.com
                  - |+

                  - |
                    # Option
                  - |
                    # SINGLE_USER_MODE=true
                  - |
                    # Cluster number setting for streaming API server.
                  - >
                    # If you comment out following line, cluster number will be
                    `numOfCpuCores - 1`.
                  - |
                    STREAMING_CLUSTER_NUM=1
                  - |
                    # Secrets
              mode: '000644'
              owner: root
              group: root
        moveMastodonConfig:
          commands:
            001_moveFile:
              command: !Sub 'mv .env.production ${MastodonFQDN}/.env.production'
              cwd: /home/mastodon
  SecurityGroupRDS:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security Group for RDS Instance Host
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-SecurityGroupRDS'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  SecurityGroupRDSIngressPublicSubnet1:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PublicSubnet1, IP ]
      FromPort: !FindInMap [ RDSConfig, Port, Value ]
      ToPort: !FindInMap [ RDSConfig, Port, Value ]
      GroupId: !Ref SecurityGroupRDS
      IpProtocol: tcp
  SecurityGroupRDSIngressPublicSubnet2:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PublicSubnet2, IP ]
      FromPort: !FindInMap [ RDSConfig, Port, Value ]
      ToPort: !FindInMap [ RDSConfig, Port, Value ]
      GroupId: !Ref SecurityGroupRDS
      IpProtocol: tcp
  SecurityGroupRDSIngressPrivateSubnet1:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet1, IP ]
      FromPort: !FindInMap [ RDSConfig, Port, Value ]
      ToPort: !FindInMap [ RDSConfig, Port, Value ]
      GroupId: !Ref SecurityGroupRDS
      IpProtocol: tcp
  SecurityGroupRDSIngressPrivateSubnet2:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet2, IP ]
      FromPort: !FindInMap [ RDSConfig, Port, Value ]
      ToPort: !FindInMap [ RDSConfig, Port, Value ]
      GroupId: !Ref SecurityGroupRDS
      IpProtocol: tcp
  SecurityGroupRDSEgress:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      GroupId: !Ref SecurityGroupRDS
      IpProtocol: '-1'
  RDSSubnetGroup:
    Type: 'AWS::RDS::DBSubnetGroup'
    Properties:
      DBSubnetGroupDescription: RDS Subnet Group
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-RDSSubnetGroup'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  RDSInstance:
    Type: 'AWS::RDS::DBInstance'
    DependsOn: VPCGatewayAttachment
    Properties:
      AllocatedStorage: !FindInMap [ RDSConfig, Storage, ValueByGb ]
      AllowMajorVersionUpgrade: false
      AutoMinorVersionUpgrade: true
      AvailabilityZone: !Select 
        - '0'
        - !Ref SubnetAvailabilityZone
      BackupRetentionPeriod: !FindInMap [ RDSConfig, BackupRetentionPeriod, Value ]
      CopyTagsToSnapshot: true
      DBInstanceClass: !Ref DBInstanceClass
      # DBName: !If 
      #   - HasDBSnapshotIdentifier
      #   - ''
      #   - !Ref DBName
      VPCSecurityGroups:
        - !Ref SecurityGroupRDS
      DBSubnetGroupName: !Ref RDSSubnetGroup
      DBSnapshotIdentifier: !If 
        - HasDBSnapshotIdentifier
        - !Ref DBSnapshotIdentifier
        - ''
      Engine: postgres
      EngineVersion: !Ref DBEngineVersion
      LicenseModel: !Ref DBLicenseModel
      MasterUsername: !Ref DBMasterUsername
      MasterUserPassword: !Ref DBMasterUserPassword
      MultiAZ: false
      Port: !FindInMap [ RDSConfig, Port, Value ]
      PubliclyAccessible: false
      StorageEncrypted: false
      StorageType: !Ref DBStorageType
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-Postgresql'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
  SecurityGroupElastiCache:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security Group for ElastiCache Instance Host
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-SecurityGroupElastiCache'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcId: !Ref VPC
  SecurityGroupElastiCacheIngressPublicSubnet1:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PublicSubnet1, IP ]
      FromPort: !FindInMap [ ElastiCacheConfig, Port, Value ]
      ToPort: !FindInMap [ ElastiCacheConfig, Port, Value ]
      GroupId: !Ref SecurityGroupElastiCache
      IpProtocol: tcp
  SecurityGroupElastiCacheIngressPublicSubnet2:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PublicSubnet2, IP ]
      FromPort: !FindInMap [ ElastiCacheConfig, Port, Value ]
      ToPort: !FindInMap [ ElastiCacheConfig, Port, Value ]
      GroupId: !Ref SecurityGroupElastiCache
      IpProtocol: tcp
  SecurityGroupElastiCacheIngressPrivateSubnet1:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet1, IP ]
      FromPort: !FindInMap [ ElastiCacheConfig, Port, Value ]
      ToPort: !FindInMap [ ElastiCacheConfig, Port, Value ]
      GroupId: !Ref SecurityGroupElastiCache
      IpProtocol: tcp
  SecurityGroupElastiCacheIngressPrivateSubnet2:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      CidrIp: !FindInMap [ CIDR, PrivateSubnet2, IP ]
      FromPort: !FindInMap [ ElastiCacheConfig, Port, Value ]
      ToPort: !FindInMap [ ElastiCacheConfig, Port, Value ]
      GroupId: !Ref SecurityGroupElastiCache
      IpProtocol: tcp
  SecurityGroupElastiCacheEgress:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      CidrIp: !FindInMap [ CIDR, All, IP ]
      GroupId: !Ref SecurityGroupElastiCache
      IpProtocol: '-1'
  ElastiCacheSubnetGroup:
    Type: 'AWS::ElastiCache::SubnetGroup'
    Properties:
      CacheSubnetGroupName: !Join 
        - '-'
        - - !Ref 'AWS::StackName'
          - ECSubnetGroup
      Description: SubnetGroup for ElastiCache instance.
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2
  ElastiCacheCluster:
    Type: 'AWS::ElastiCache::CacheCluster'
    Properties:
      AutoMinorVersionUpgrade: true
      CacheNodeType: !Ref ElastiCacheNodeType
      CacheSubnetGroupName: !Ref ElastiCacheSubnetGroup
      ClusterName: !Ref 'AWS::StackName' 
      Engine: redis
      EngineVersion: !Ref ElastiCacheVersion
      NumCacheNodes: 1
      Port: !FindInMap 
        - ElastiCacheConfig
        - Port
        - Value
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-RedisCache'
        - Key: !Ref Tag1Key
          Value: !Ref Tag1Value
        - Key: !Ref Tag2Key
          Value: !Ref Tag2Value
      VpcSecurityGroupIds:
        - !GetAtt 
          - SecurityGroupElastiCache
          - GroupId
Outputs:
  BastionInstanceIPAddress:
    Description: Host name of Bastion instance
    Value: !GetAtt 
      - BastionInstance
      - PublicIp
  VPC:
    Description: VPC ID
    Value: !Ref VPC
    Export:
      Name: !Sub '${AWS::StackName}-VPC'
  SubnetAvailabilityZone1:
    Description: Availability Zones of Subnet
    Value: !Select 
      - '0'
      - !Ref SubnetAvailabilityZone
    Export:
      Name: !Sub '${AWS::StackName}-SubnetAvailabilityZone1'
  SubnetAvailabilityZone2:
    Description: Availability Zones of Subnet
    Value: !Select 
      - '1'
      - !Ref SubnetAvailabilityZone
    Export:
      Name: !Sub '${AWS::StackName}-SubnetAvailabilityZone2'
  PrivateSubnet1:
    Description: Private Subnet
    Value: !Ref PrivateSubnet1
    Export:
      Name: !Sub '${AWS::StackName}-PrivateSubnet1'
  PrivateSubnet2:
    Description: Private Subnet
    Value: !Ref PrivateSubnet2
    Export:
      Name: !Sub '${AWS::StackName}-PrivateSubnet2'
  PublicSubnet1:
    Description: Public Subnet
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnet1'
  PublicSubnet2:
    Description: Public Subnet
    Value: !Ref PublicSubnet2
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnet2'
  AWSAccessKey:
    Description: AWSAccessKey.
    Value: !Ref ContentsAWSAccessKey
    Export:
      Name: !Sub '${AWS::StackName}-AWSAccessKey'
  AWSAccessSecret:
    Description: AWSAccessSecret.
    Value: !Ref ContentsAWSAccessSecret
    Export:
      Name: !Sub '${AWS::StackName}-AWSAccessSecret'
  SecurityGroupMastodonInstance:
    Description: Security Group ID for mastodon instance.
    Value: !Ref SecurityGroupMastodonInstance
    Export:
      Name: !Sub '${AWS::StackName}-SecurityGroupMastodonInstance'
  RDSInstanceEndPoint:
    Description: Address of RDS
    Value: !GetAtt 
      - RDSInstance
      - Endpoint.Address
  RDSInstanceEndPointPort:
    Description: Port number of RDS
    Value: !GetAtt 
      - RDSInstance
      - Endpoint.Port
  ElasticacheEndPoint:
    Description: Address of Elasticache
    Value: !GetAtt 
      - ElastiCacheCluster
      - RedisEndpoint.Address
  ElasticacheEndPointPort:
    Description: Port number of Elasticache
    Value: !GetAtt 
      - ElastiCacheCluster
      - RedisEndpoint.Port
